<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu1"
        android:title="@string/maps_menu"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_map_24" />
    <item
        android:id="@+id/menu2"
        android:title="@string/menu_logout"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_logout_24"/>
</menu>